dnl Process this file with autoconf to produce a configure script.

AC_INIT(missing)

AC_CANONICAL_HOST

canonical_srcdir="`cd [$]srcdir && pwd`"
if test "X`pwd`" = "X$canonical_srcdir"; then
  rm -f config.log config.cache confdefs.h
  AC_ERROR("configuring in source directory not supported.")
fi

AM_INIT_AUTOMAKE(libexception, 1.0)
AM_MAINTAINER_MODE

LIB_AC_PROG_CC

AC_PROG_INSTALL

configdirs=libexception
multilibs=`${CC} --print-multi-lib`

fmldirs=
for dir in $configdirs; do
  for mlib in [$]multilibs; do
    mldir=`echo $mlib | sed -e 's,;.*,,'`
    fmldirs="$fmldirs $dir/$mldir"
  done
done

AC_SUBST(fmldirs)
AC_OUTPUT(Makefile)

for dir in $configdirs; do

  echo "Processing $dir..."
  mkdir -p $dir

  for mlib in $multilibs; do
    mlswitches=`echo $mlib | sed -e 's,.*;,,' -e 's,@, -,g' -e 's, ,,'`
    mldir_bld=`echo $mlib | sed -e 's,;.*,,'`
    mldir_os=`${CC} $mlswitches --print-multi-os-dir`

    with_install_includes="--with-install-includes"

    echo "Configuring $dir, subdir \"$mldir_bld\" (install in \"$mldir_os\") for multilib \"$mlswitches\"..."
    mkdir -p $dir/$mldir_bld
    (
      cd $dir/$mldir_bld
      CC="${CC} $mlswitches" \
	$canonical_srcdir/$dir/configure $ac_configure_args \
        --without-extra-pain --libdir="$libdir/$mldir_os" \
        $with_install_includes
    )

    with_install_includes=
  done
done

