
AUTOMAKE_OPTIONS=foreign

AM_CFLAGS = -Wall -Werror -Wstrict-prototypes -Wmissing-prototypes

lib_LIBRARIES = libsbprof.a

libsbprof_a_SOURCES = \
			 sbprof.c \
			 sbprof_cpu.c \
			 sbprof_cpu_speed.c \
			 sbprof_inlines.c \
			 sbprof_zbbus.c \
			 sbprof_zbbus_count.c

include_HEADERS = sbprof.h

