dnl Process this file with autoconf to produce a configure script.

AC_INIT(sbprof.c)

dnl Require a special arg to be passed from the top-level configure.
AC_ARG_WITH(extra-pain, [], [], [
  rm -f config.cache config.log confdefs.h
  AC_MSG_ERROR("configuring by hand is not allowed\; configure only from the top level")
])

AC_CONFIG_AUX_DIR(..)
AC_CANONICAL_HOST

AM_INIT_AUTOMAKE(libsbprof, 1.0)
AM_MAINTAINER_MODE

LIB_AC_PROG_CC
AC_CHECK_TOOL(AS, ${CC})
AC_CHECK_TOOL(AR, ar)
AC_CHECK_TOOL(RANLIB, ranlib, :)

AC_PROG_INSTALL

AC_OUTPUT(Makefile)
